# rustls-native-certs

./: .azure-pipelines.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  smoke-tests.yaml
admin/pipelines/: cargo-steps.yml
examples/: google.rs  print-trust-anchors.rs
integration-tests/: macos.sh
integration-tests/android/: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  libs.versions.toml  settings.gradle.kts
integration-tests/android/src/androidTest/kotlin/rustls/android/tests/: CompareMozilla.kt  SmokeTests.kt
integration-tests/android/src/main/: AndroidManifest.xml
integration-tests/android/src/main/kotlin/rustls/android/tests/: MainActivity.kt
integration-tests/android/src/main/rust/: lib.rs  tests.rs
src/: android.rs  cert_env.rs  cert_file.rs  lib.rs  linux.rs  macos.rs  rustls.rs  unix.rs  webpki.rs  windows.rs
tests/: compare_mozilla.rs  google_smoketest.rs  smoketests.rs
tests/common/: mod.rs
